--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "react-native-vector-icons": "^4.5.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "express": "^4.18.2",
     "mobx": "^6.9.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -24,6 +25,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
