--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-notifications": "~0.18.1",
+    "expo-permissions": "^14.1.1",
     "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
     "mobx": "^6.9.0",
@@ -26,7 +28,9 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "expo-location": "~15.1.1",
+    "expo-camera": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
