--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
-    "expo-notifications": "~0.18.1",
+    "expo-camera": "~13.2.1",
+    "expo-location": "~15.1.1",
+    "expo-notifications": "^0.18.1",
     "expo-permissions": "^14.1.1",
     "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
     "mobx": "^6.9.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
@@ -28,9 +30,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^4.4.4",
-    "expo-location": "~15.1.1",
-    "expo-camera": "~13.2.1"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
